...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/tvwTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/acc_title_top"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/vieBackgroundButton"
            app:layout_constraintStart_toStartOf="@+id/vieBackgroundButton"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGoToEmailPassword"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/acc_login_email_password"
            app:layout_constraintEnd_toEndOf="@+id/vieBackgroundButton"
...
